syntax = "proto3";

package ghidraremotesync;

service RemoteProgramListing{
    rpc ListRemotePrograms (ListRemoteProgramsRequest) returns (ListRemoteProgramsResponse);
}

message ListRemoteProgramsRequest{

}

message RemoteProgramInfo {
    string name = 1;
    bool is_directory = 2;
    repeated RemoteProgramInfo sub_files = 3;
}

message ListRemoteProgramsResponse {
    repeated RemoteProgramInfo files = 1;
}
